--- a/projects/bodyfonts/bodyfonts.tex
+++ b/projects/bodyfonts/bodyfonts.tex
@@ -2,9 +2,18 @@
 
 \starttext
     \input content/titlepage
+    \input content/tableofcontents
     \input content/foreword
+
+    \input content/coelacanth
+    \input content/etbb
     \input content/ebgaramond
-    \input content/crimsontext
+    \input content/cochineal
+    \input content/baskervillef
+    \input content/domitian
+    \input content/xcharter
+    \input content/erewhon
+
 
 \stoptext
 
