--- a/projects/bodyfonts/content/ebgaramond.tex
+++ b/projects/bodyfonts/content/ebgaramond.tex
@@ -1,23 +1,12 @@
 \switchtobodyfont[duffnerebgaramond,10pt]
-\chapter{EB Garamond}
+\chapter[ebgaramond]{EB Garamond}
 
-\section{Background}
-When many people think about a typical book font, they think of Garamond. However, there are many different typefaces called Garamond. To varying degrees they draw inspiration from fonts used by an italian printer called Claude Garamont at the beginning of the 17th century. 
+Many typefaces in the Garamond style have been devoloped, and they vary considerably in appearance. Some named Garamond are actually not based on the designs by Claude Garamont, while other typefaces not named Garamond are closely based on the original specimens.
 
-Georg Duffner created EB Garamond with the intention of making a historically faithful digitalization of an original specimen sheet. Because of this, he did not make a bold variant, since bold fonts were not yet invented at the time. He focused instead on copying fonts for different sizes (8pt and 12pt), the ornamental drop caps, and historical ligatures. 
+There are currently two main versions of EB Garamond. The outlines of the glyphs are identical, but they both come with different strengths and weaknesses.
 
-When Google wanted to add this font to their collection, they hired Octavio Pardo to create the bold style and to focus on the modern needs of a typeface. Therefore we now have two typefaces, both called EB Garamond. Duffner’s original and Pardo’s Google version. 
+Georg Duffner created EB Garamond with an aim to provide a true Garamond, with many alternate glyphs, ligatures, and substitutions available for historical accuracy. The original plan was to make a range of optical sizes from 6pt to 40pt, but development seems to have stopped after making the 8pt and 12pt designs. It does not come with a bold weight, since that would be an anachronism. 
 
-Two sources with different goals. Egenolff-Berner specimen. Ambitious plan. Octavio Pardo for Google. Suitable for.
-
-
-\section{Features}
-Duffner version plenty of historical opentype features, optical sizes. Pardo version bold.
-
-Alphabet width: 10,11,12pt, ideal line length.
-
-\section{Variants}
-
-\section{Where to get them}
+Octavio Pardo forked EB Garamond in the 12pt optical size, adding medium, semibold, bold, and extra bold weights, while removing ornamental initials and opentype features rarely used in modern texts. This is the version found in Google fonts.
 
 
