--- a/projects/bodyfonts/content/foreword.tex
+++ b/projects/bodyfonts/content/foreword.tex
@@ -1,1 +1,7 @@
-\chapter{Foreword}
+\chapter{General considerations}
+
+Bringhurst’s first principle is that “Typography exists to honor content.” While most graphic art invites your attention to be admired as such, good typography guides the reader to become immersed in the content without being noticed in itself. Letterforms with more spirit and personality must therefore match the intended tone and feeling of the text, as to not distract the reader. 
+
+Beyond the aesthetics of individual letterforms, there are many practical considerations regarding color, character sets, and intended medium. 
+
+
