--- a/projects/bodyfonts/content/titlepage.tex
+++ b/projects/bodyfonts/content/titlepage.tex
@@ -1,2 +1,23 @@
-titlepage
+\definesymbol[mytitleleaf][\getglyph{file:fonts/coelacanth/Coelacanth}{\char"2767}] % by unicode index
+
+\start
+
+\mbox{}\blank[6*line,force]
+
+\startalignment[middle]
+\tfb%\setupinterlinespace
+A selection of
+\blank[line]
+free and open source
+\blank[line]
+body typefaces
+\blank[2*line]
+\symbol{mytitleleaf}
+\blank[2*line]
+\tfa Estee\par
+\blank[line]
+\date
+\stopalignment
+\stop
 \page[right]
+
