--- a/projects/bodyfonts/bodyfonts-environment.tex
+++ b/projects/bodyfonts/bodyfonts-environment.tex
@@ -26,7 +26,7 @@
 \newdimen\gutter \gutter=\dimexpr(\paperwidth-\textmeasure)/2
 
 \setuplayout[
-    grid=no,
+    grid=yes,
    % TOP TO BOTTOM    
     topspace=20mm,
     header=0\baselineskip,
