--- a/projects/bodyfonts/content/coelacanth.tex
+++ b/projects/bodyfonts/content/coelacanth.tex
@@ -1,10 +1,7 @@
 \definedfont[file:fonts/coelacanth/CoelacanthCaption at 10pt]
 \chapter[coelacanth]{Coelacanth}
 
-In the 1470’s, Nicholas Jenson created the roman typeface with the proportions, shapes, and arrangements that marked its transition from an imitation of handwriting to the style that has remained in use throughout subsequent centuries of printing.
+In 1469, Nicholas Jenson created the roman typeface. Borrowing the calligraphic shapes of Carolingian minuscules, he added serifs and arranged text in a style that has remained in use throughout subsequent centuries of printing.
 
-
-Clearly borrowing their shapes from the calligraphic shapes that preceded them
-
-the printed roman lowercase letter took on the proportions, shapes, and arrangements that marked its transition from an imitation of handwriting to the style that has remained in use throughout subsequent centuries of printing.  
+{\it Coelacanth} is inspired by {\it Centaur}, perhaps the most famous and best regarded 20th century revival of Jensons types. It aims to be a professional typeface family, with six optical sizes and six weights of each size. Worth noting is that the regular text size is designed to be used at 14pt, larger than usual body typefaces. If your text uses a smaller body font, you may want to try the caption size, which is intended to be used at 10pt to 12pt.
 
