--- a/projects/bodyfonts/content/foreword.tex
+++ b/projects/bodyfonts/content/foreword.tex
@@ -2,6 +2,8 @@
 
 Bringhurst’s first principle is that “Typography exists to honor content.” While most graphic art invites your attention to be admired as such, good typography guides the reader to become immersed in the content without being noticed in itself. Letterforms with more spirit and personality must therefore match the intended tone and feeling of the text, as to not distract the reader. 
 
-Beyond the aesthetics of individual letterforms, there are many practical considerations regarding color, character sets, and intended medium. 
+That said, in the following pages I do want you to evaluate the appearance of the text. Not necessarily magnified to analyze the details of each letterform but rather the page as a whole, the color and readability of ordinary paragraphs in the intended medium. The content is completely secondary to this goal, but I have at least tried to fill it with relevant information.
 
+All paragraphs are set in 10/13.5 on a 100mm line width, to make comparisons easier, though
+I would recommend changing this as needed.
 
