--- a/projects/bodyfonts/bodyfonts.tex
+++ b/projects/bodyfonts/bodyfonts.tex
@@ -1,19 +1,163 @@
 \environment bodyfonts-environment
 
 \starttext
-    \input content/titlepage
-    \input content/tableofcontents
-    \input content/foreword
+    
+\input content/titlepage
+\input content/tableofcontents
+\input content/foreword
 
-    \input content/coelacanth
-    \input content/etbb
-    \input content/ebgaramond
-    \input content/cochineal
-    \input content/baskervillef
-    \input content/domitian
-    \input content/xcharter
-    \input content/erewhon
+%
+% C O E L A C A N T H
+%
+
+\switchtobodyfont[coelacanth,10pt]
+%\definedfont[file:Coelacanth at 10pt]
+%\chapter[coelacanth]{Coelacanth}
+\chapter[coelacanth]{Test}
+
+%{\it Coelacanth} is a font family inspired by {\it Centaur}, offering a rich set of optical sizes and weights. 
+
+%The general design is based on the first roman typeface, created by Nicholas Jenson in Venice in 1470. Before the roman style, books were printed in blackletter. In contrast, Jenson based his typeface on the humanist calligraphic style called {\it lettera antiqua}, which were based on Carolingian minuscules, combined with the shapes of inscriptional Roman capitals to start sentences. This combination has remained in use throughout the following centuries of printing.
+
+\noindent{\definedfont[file:CentaurMT at 11.1pt]Early Venetian typefaces were made in a time before italics or bold weights were invented, but most modern revivals add some form of them to meet the common typesetting needs of today. Centaur is most often paired with the italic typeface Arrighi. Coelacanth has it’s own italics based on the general style of Francesco Griffo’s italics while trying to incorporate something of the feel of Centaur. 
+}
+\blank[line]
+\noindent Early Venetian typefaces were made in a time before italics or bold weights were invented, but most modern revivals add some form of them to meet the common typesetting needs of today. Centaur is most often paired with the italic typeface Arrighi. Coelacanth has it’s own italics based on the general style of Francesco Griffo’s italics while trying to incorporate something of the feel of Centaur. 
+\blank[line]
+\noindent{\definedfont[file:AJensonPro-Regular at 10.5pt]Early Venetian typefaces were made in a time before italics or bold weights were invented, but most modern revivals add some form of them to meet the common typesetting needs of today. Centaur is most often paired with the italic typeface Arrighi. Coelacanth has it’s own italics based on the general style of Francesco Griffo’s italics while trying to incorporate something of the feel of Centaur. 
+}
+\page
+---
+
+This is an attempt by Ben Whitmore to create a typefamily inspired by {\it Centaur}, with a rich set of glyphs, weights and optical sizes.
+
+The design is based on the earliest roman typefaces, first created in Venice in the 1470’s by Nicholas Jenson. In contrast with the earlier blackletter, Jensons letters clearly borrowed their shapes from the calligraphic style of the time, which was based on Carolingian minuscules. Adding serifs and Imperial Roman capitals, he created a style that has remained in use throughout subsequent centuries of printing.
+
+Early Venetian typefaces were made in a time before italic styles or bold weights were invented, which would make it difficult to meet all the common typesetting needs of today. {\it Centaur} is usually paired with the italic typeface {\it Arrighi}, and much later a bold weight was added. The italic for {\it Coelacanth} was made from scratch, using the general italic style of Francesco Griffo while trying to incorporate something of the feel of Centaur. {\it Coelacanth} also comes with six weights, added with some reluctance.
+
+There are six optical sizes in {\it Coelacanth,} designed to be used at 4pt, 6pt, 8pt, 14pt, 24pt, and 60pt. Worth noting is that the 14pt design is intended for text use. Scaling it down to, say, 10pt might make it a bit spindly, so it could be a good idea to compare the look with the 8pt design size scaled up to 10pt too.
+
+OpenType features include both small caps and petite caps, old-style and lining numbers in proportional and tabular variants, numerators and denominators, a handful of stylistic alternatives, and slashed zero glyphs.
+
+%
+% ETbb
+%
+
+\switchtobodyfont[etbb,10pt]
+\chapter[etbb]{ETbb}
+
+ETbb stands for Edward Tufte’s Bembo. As the name suggests, the inspiration comes from a design first used by the Venetian printer Aldus Manutius in 1496 for a book written by Pietro Bembo. It’s a serene and versatile typeface of genuine Renaissance structure. The modern typeface named Bembo was made in 1929 by Monotype, and it has since been one of the most popular typefaces for book production.
+
+When the printing industry went digital, Edward Tufte noticed that digital printing rendered fonts thinner compared to lead type, as it didn’t account for ink squeeze. Unhappy with the results, he commissioned a typeface for his own books called ET-Bembo, which eventually was released under a free software license in 2015. This typeface was enhanced in 2019 under the name XETbook, and finally expanded in 2020 as ETbb.
+
+ETbb adds a full set of figure styles, small caps in all styles, superior letters and figures, inferior figures, and a new capital Sharp S with small caps version. Compared to Cardo, another free Bembo-like typeface, it is significantly darker.
+
+"show a degree of abstraction from calligraphy compared to Jenson"
+
+ 
+
+"digital versions of Bembo lack the vigor, weight, and formal integrity of either the De Ætna face or the original Monotype version of Bembo"
+
+%
+% EB Garamond
+%
+
+\switchtobodyfont[duffnerebgaramond,10pt]
+\chapter[ebgaramond]{EB Garamond}
+
+Many typefaces in the Garamond style have been devoloped, and they vary considerably in appearance. Some named Garamond are actually not based on the designs by Claude Garamont, while other typefaces not named Garamond are closely based on the original specimens.
+
+There are currently two main versions of EB Garamond. The outlines of the glyphs are identical, but they both come with different strengths and weaknesses.
+
+Georg Duffner created EB Garamond with an aim to provide a true Garamond, with many alternate glyphs, ligatures, and substitutions available for historical accuracy. The original plan was to make a range of optical sizes from 6pt to 40pt, but development seems to have stopped after making the 8pt and 12pt designs. It does not come with a bold weight, since that would be an anachronism. 
+
+Octavio Pardo forked EB Garamond in the 12pt optical size, adding medium, semibold, bold, and extra bold weights, while removing ornamental initials and opentype features rarely used in modern texts. This is the version found in Google fonts.
+
+%
+%  C O C H I N E A L
+%
+
+\switchtobodyfont[cochineal,10pt]
+\chapter[cochineal]{Cochineal}
+
+{\it Cochineal} is a fork of {\it Crimson,} which aimed to be a classic old-style serif without being based on a specific historical typeface. It’s generally similar to {\it Minion}, though with smaller x-height and less plain in detail.
+
+To make a long story short, the development of the original typeface, {\it Crimson Text}, stopped in favor of a new main branch named {\it Crimson} in 2012. Unfortunately, there has been no new work on either branch for many years.  {\it Cochineal}, a fork of {\it Crimson} first published in 2016, added many new glyphs and is still actively maintained. {\it Crimson Pro} is a complete redesign of the original typeface, commissioned by Google in 2018.
+
+To get an average of 66 characters per line, use a line lenth of 98 mm for a 10 pt body font, 110 mm for an 11 pt body font, and 118 mm for a 12 pt body font.
+
+{\it Cochineal} provides fonts in regular, italic, bold, and bold italic with a full array of features like small caps, old-style and lining figures, a swash Q, and more. There is support for Roman, Greek, and Cyrillic alphabets.
+
+You can download the fonts here:  
+
+https://www.ctan.org/tex-archive/fonts/cochineal/opentype
+
+%
+%  B A S K E R V I L L E F
+%
+
+\switchtobodyfont[baskervillef,10pt]
+\chapter[baskervillef]{BaskervilleF}
+
+Baskerville is the epitome of Neoclassicism and eighteenth-century rationalism in type. During a time when William Caslon was the dominant figure in printing in England, John Baskerville released a typeface according to his ideals. The glyphs were very regular with few embellishments, high contrast (difference between thick and thin strokes), almost vertical axis of stress, and sharply cut serifs. This required ultra-smooth pressed paper and high quality ink. 
+
+Libre Baskerville is designed as a web font and therefore optimized for computer screen use. With increased x-height, short ascenders, low contrast, and thick serifs, it moved away from the original typeface idea. BaskervilleF is based on this font, while undoing the transformations required for a web font.
+
+John Baskerville used his wealth to create high-end books according to his ideals in the latter half of the 18th century in England. This required him to make his own printing machinery, ultra-smooth pressed paper and high quality ink. During a time when Caslon was the dominant figure in printing, Baskerville released his typeface which relied more on simplicity of form and strict attention to detail. The glyphs were very regular with few embellishments, had high contrast curved strokes that were close to circular, almost vertical axis of modulation, and sharply cut serifs. His rivals spread stories that this typeface, due to excessive sharpness and contrast, was a danger to the eyes. Baskerville eventually abandoned the printing business, and a foundry owned by Joseph Fry cut an imitation of Baskerville that didn't require the highest level of equipment, paper, and ink. This is the version that was eventually revived by ATF as Fry's Baskerville. In 2012, Pablo Impallari created a web font, Libre Baskerville, where he increased the x-height, shortened the ascenders, lowered contrast and thickened the serifs. In short, to work within the restrictions of computer screens, they went the opposite direction of Baskervilles ideals. BaskervilleF is based on this font, while undoing the transformation to a web font.
+
+small caps and text figures,
+often omitted, are essential to the spirit of the original
+
+You can download the fonts here:  
+
+%
+% D O M I T I A N
+%
+
+\switchtobodyfont[domitian,10pt]
+\chapter[domitian]{Domitian}
+
+{\it Domitian} is a typeface based on the {\it Palatino} design by Hermann Zapf, as implemented in the {\it URW Palladio L} typeface, but extended to cover more glyphs.
+
+Palatino is a humanist typeface inspired by italian renaissance calligraphy, with larger proportions than for example {\it Garamond} or {\it Bembo}. The reason for this was at least in part due to the poor quality of paper available at the time in Germany.
+
+To get an average of 66 characters per line, use a line lenth of 110 mm for a 10 pt body font, 118 mm for an 11 pt body font, and 131 mm for a 12 pt body font.
+
+{\it Pagella} provides fonts in regular, italic, bold, and bold italic with small caps in the regular style, old-style figures and lining figures. There is support for Roman, Greek, and Cyrillic alphabets.
+
+"Palatino, Mr. Bringhurst writes, is a “lyrical and taut” face that “remembers in every stroke both its identity as type and its indebtedness to the pen.”"
+
+%
+%  X C H A R T E R
+%
+
+\switchtobodyfont[xcharter,10pt]
+\chapter[xcharter]{XCharter}
+
+\input knuth
+
+%
+% Erewhon
+%
+
+\switchtobodyfont[erewhon,10pt]
+\chapter[erewhon]{Erewhon}
+
+\input knuth
 
 
+
+
+
+
+
+%    \input content/coelacanth
+%    \input content/etbb
+%    \input content/ebgaramond
+%    \input content/cochineal
+%    \input content/baskervillef
+%    \input content/domitian
+%    \input content/xcharter
+%    \input content/erewhon
 \stoptext
 
