--- a/projects/bodyfonts/plaintextcontent.tex
+++ b/projects/bodyfonts/plaintextcontent.tex
@@ -1,17 +1,23 @@
 %
-% Coelacanth
+% C O E L A C A N T H
 %
 
-In the 1469, Nicholas Jenson created the roman typeface with the proportions, shapes, and arrangements that marked its transition from an imitation of handwriting to the style that has remained in use throughout subsequent centuries of printing.
+\definedfont[file:fonts/coelacanth/CoelacanthCaption at 10pt]
+\chapter[coelacanth]{Coelacanth}
 
+In 1469, Nicholas Jenson created the roman typeface. Borrowing the calligraphic shapes of Carolingian minuscules, he added serifs and arranged text in a style that has remained in use throughout subsequent centuries of printing.
 
-Clearly borrowing their shapes from the calligraphic shapes that preceded them
+Of the revivals in modern time, {\it Centaur} is considered by many to be one of the most beautiful, and that is the typeface 
 
-the printed roman lowercase letter took on the proportions, shapes, and arrangements that marked its transition from an imitation of handwriting to the style that has remained in use throughout subsequent centuries of printing.  
+"Jenson's letters are clearly borrowing their shapes from the calligraphic shapes that preceded them, called littera antica. These were in turn based on Carolingian minuscules, to which serifs, borrowed from the Imperial Roman capitals, were added. It was first in use in his 1470 edition of Eusebius".
+ 
 
 %
 % ETbb
 %
+
+\switchtobodyfont[etbb,10pt]
+\chapter[etbb]{ETbb}
 
 ETbb stands for Edward Tufte’s Bembo. As the name suggests, the inspiration comes from a design first used by the Venetian printer Aldus Manutius in 1496 for a book written by Pietro Bembo. It’s a serene and versatile typeface of genuine Renaissance structure. The modern typeface named Bembo was made in 1929 by Monotype, and it has since been one of the most popular typefaces for book production.
 
@@ -19,9 +25,18 @@ When the printing industry went digital, Edward Tufte noticed that digital print
 
 ETbb adds a full set of figure styles, small caps in all styles, superior letters and figures, inferior figures, and a new capital Sharp S with small caps version. Compared to Cardo, another free Bembo-like typeface, it is significantly darker.
 
+"show a degree of abstraction from calligraphy compared to Jenson"
+
+ 
+
+"digital versions of Bembo lack the vigor, weight, and formal integrity of either the De Ætna face or the original Monotype version of Bembo"
+
 %
 % EB Garamond
 %
+
+\switchtobodyfont[duffnerebgaramond,10pt]
+\chapter[ebgaramond]{EB Garamond}
 
 Many typefaces in the Garamond style have been devoloped, and they vary considerably in appearance. Some named Garamond are actually not based on the designs by Claude Garamont, while other typefaces not named Garamond are closely based on the original specimens.
 
@@ -32,8 +47,11 @@ Georg Duffner created EB Garamond with an aim to provide a true Garamond, with m
 Octavio Pardo forked EB Garamond in the 12pt optical size, adding medium, semibold, bold, and extra bold weights, while removing ornamental initials and opentype features rarely used in modern texts. This is the version found in Google fonts.
 
 %
-% Cochineal
+%  C O C H I N E A L
 %
+
+\switchtobodyfont[cochineal,10pt]
+\chapter[cochineal]{Cochineal}
 
 {\it Cochineal} is a fork of {\it Crimson,} which aimed to be a classic old-style serif without being based on a specific historical typeface. It’s generally similar to {\it Minion}, though with smaller x-height and less plain in detail.
 
@@ -48,8 +66,11 @@ You can download the fonts here:
 https://www.ctan.org/tex-archive/fonts/cochineal/opentype
 
 %
-% BaskervilleF
+%  B A S K E R V I L L E F
 %
+
+\switchtobodyfont[baskervillef,10pt]
+\chapter[baskervillef]{BaskervilleF}
 
 Baskerville is the epitome of Neoclassicism and eighteenth-century rationalism in type. During a time when William Caslon was the dominant figure in printing in England, John Baskerville released a typeface according to his ideals. The glyphs were very regular with few embellishments, high contrast (difference between thick and thin strokes), almost vertical axis of stress, and sharply cut serifs. This required ultra-smooth pressed paper and high quality ink. 
 
@@ -63,8 +84,11 @@ often omitted, are essential to the spirit of the original
 You can download the fonts here:  
 
 %
-% Domitian
+% D O M I T I A N
 %
+
+\switchtobodyfont[domitian,10pt]
+\chapter[domitian]{Domitian}
 
 {\it Domitian} is a typeface based on the {\it Palatino} design by Hermann Zapf, as implemented in the {\it URW Palladio L} typeface, but extended to cover more glyphs.
 
@@ -72,17 +96,25 @@ Palatino is a humanist typeface inspired by italian renaissance calligraphy, wit
 
 To get an average of 66 characters per line, use a line lenth of 110 mm for a 10 pt body font, 118 mm for an 11 pt body font, and 131 mm for a 12 pt body font.
 
-{\it Pagella} provides fonts in regular, {\it italic}, {\bf bold}, and {\bi bold italic} with \hairspace{\spaceskip 0.28em\kerncharacters[0.08]\sc small caps} \hairspace in the regular style, old-style figures (0123456789) and lining figures ({\feature[+][lnum]01234567890}). There is support for Roman, Greek, and Cyrillic alphabets.
+{\it Pagella} provides fonts in regular, italic, bold, and bold italic with small caps in the regular style, old-style figures and lining figures. There is support for Roman, Greek, and Cyrillic alphabets.
+
+"Palatino, Mr. Bringhurst writes, is a “lyrical and taut” face that “remembers in every stroke both its identity as type and its indebtedness to the pen.”"
 
 %
-% Xcharter
+%  X C H A R T E R
 %
 
+\switchtobodyfont[xcharter,10pt]
+\chapter[xcharter]{XCharter}
 
+\input knuth
 
 %
 % Erewhon
 %
 
+\switchtobodyfont[erewhon,10pt]
+\chapter[erewhon]{Erewhon}
 
+\input knuth
 
