--- a/projects/bodyfonts/bodyfonts.tex
+++ b/projects/bodyfonts/bodyfonts.tex
@@ -93,6 +93,21 @@ You can download the fonts here:
 https://www.ctan.org/tex-archive/fonts/cochineal/opentype
 
 %
+% S A B O N   N E X T
+%
+
+\switchtobodyfont[sabonnext,10pt]
+%\definedfont[file:Coelacanth at 10pt]
+%\chapter[coelacanth]{Coelacanth}
+\chapter[sabonnext]{Sabon Next}
+
+%\input zapf
+
+{\definedfont[file:Coelacanth at 72pt]xa}{\definedfont[file:SabonNextLTPro-Regular at 66pt]ax}%
+{\definedfont[file:Cochineal-Roman at 68pt]xa}{\definedfont[file:ETbb-Regular at 68pt]ax}
+
+
+%
 %  B A S K E R V I L L E F
 %
 
