--- a/projects/meganassignments/assignment1.tex
+++ b/projects/meganassignments/assignment1.tex
@@ -8,7 +8,7 @@
 
 \questionnonumber{What does yoga mean to me?} 
 
-From my perspective, yoga is ultimately a form of \hairspace{\em homecoming}. I interpret homecoming as a return to one’s innermost spiritual nature, while yoga is the vehicle that has the capacity to take me there. 
+From my perspective, yoga is ultimately a form of {\em homecoming}. I interpret homecoming as a return to one’s innermost spiritual nature, while yoga is the vehicle that has the capacity to take me there. 
 
 Lower levels of cortisol, increased mobility, strengthened muscles, and improved quality of sleep are all measurable and tangible benefits of yoga that I have personally experienced and enjoyed. And while these physical benefits are signficant, as I’ve furthered my journey in yoga, I have found that there is the less tangible benefit of spiritual connection that has proven even more valuable. Part of this spiritual connection is the realization that we are intrinsically worthy and equal, as well as parts of a greater whole and interconnectedness. This has been profoundly comforting to me.
 
