--- a/projects/bodyfonts/centaurtest.tex
+++ b/projects/bodyfonts/centaurtest.tex
@@ -1,8 +1,10 @@
 \environment bodyfonts-environment
 
+\definebodyfontenvironment[2.8ex]
+
 \starttext
 
-\switchtobodyfont[coelacanth,10pt]
+\switchtobodyfont[coelacanth,11pt]
 %\definedfont[file:Coelacanth at 10pt]
 %\chapter[coelacanth]{Coelacanth}
 \chapter[coelacanth]{Test}
@@ -11,11 +13,11 @@
 
 %The general design is based on the first roman typeface, created by Nicholas Jenson in Venice in 1470. Before the roman style, books were printed in blackletter. In contrast, Jenson based his typeface on the humanist calligraphic style called {\it lettera antiqua}, which were based on Carolingian minuscules, combined with the shapes of inscriptional Roman capitals to start sentences. This combination has remained in use throughout the following centuries of printing.
 
-\noindent{\definedfont[file:CentaurMT at 11.1pt]Vestibulum porta ac elit ut pellentesque. Duis porta metus ut tortor rutrum tristique. Etiam placerat ligula eget mi tincidunt pellentesque. Duis iaculis consequat purus nec aliquet. Integer euismod quam lectus, nec scelerisque quam tempor ac. Fusce porttitor mauris non lacinia mattis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus faucibus tempor lorem, eget cursus mi posuere porttitor. Nam quam tortor, lobortis a congue sed, laoreet quis ligula. 
+\noindent{\definedfont[file:CentaurMT at 12.22pt]Vestibulum porta ac elit ut pellentesque. Duis porta metus ut tortor rutrum tristique. Etiam placerat ligula eget mi tincidunt pellentesque. Duis iaculis consequat purus nec aliquet. Integer euismod quam lectus, nec scelerisque quam tempor ac. Fusce porttitor mauris non lacinia mattis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus faucibus tempor lorem, eget cursus mi posuere porttitor. Nam quam tortor, lobortis a congue sed, laoreet quis ligula. 
 }
 \blank[line]
 \noindent Vestibulum porta ac elit ut pellentesque. Duis porta metus ut tortor rutrum tristique. Etiam placerat ligula eget mi tincidunt pellentesque. Duis iaculis consequat purus nec aliquet. Integer euismod quam lectus, nec scelerisque quam tempor ac. Fusce porttitor mauris non lacinia mattis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus faucibus tempor lorem, eget cursus mi posuere porttitor. Nam quam tortor, lobortis a congue sed, laoreet quis ligula.   
 \blank[line]
-\noindent{\definedfont[file:AJensonPro-Regular at 10.5pt]Vestibulum porta ac elit ut pellentesque. Duis porta metus ut tortor rutrum tristique. Etiam placerat ligula eget mi tincidunt pellentesque. Duis iaculis consequat purus nec aliquet. Integer euismod quam lectus, nec scelerisque quam tempor ac. Fusce porttitor mauris non lacinia mattis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus faucibus tempor lorem, eget cursus mi posuere porttitor. Nam quam tortor, lobortis a congue sed, laoreet quis ligula. 
+\noindent{\definedfont[file:AJensonPro-Regular at 11.6pt]Vestibulum porta ac elit ut pellentesque. Duis porta metus ut tortor rutrum tristique. Etiam placerat ligula eget mi tincidunt pellentesque. Duis iaculis consequat purus nec aliquet. Integer euismod quam lectus, nec scelerisque quam tempor ac. Fusce porttitor mauris non lacinia mattis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus faucibus tempor lorem, eget cursus mi posuere porttitor. Nam quam tortor, lobortis a congue sed, laoreet quis ligula. 
 
 \stoptext
