--- a/projects/meganassignments/assignments-environment.tex
+++ b/projects/meganassignments/assignments-environment.tex
@@ -3,15 +3,15 @@
 \mainlanguage[en]
 
 %\lesshyphens
-%\setuplanguage[en][lefthyphenmin=5,righthyphenmin=5]
-\setupalign[nothyphenated]
+\setuplanguage[en][lefthyphenmin=5,righthyphenmin=5]
+%\setupalign[nothyphenated]
 
 %%
 %% F O N T S
 %%
 
 \setupbodyfont[ajenson,12pt]
-\definebodyfontenvironment[12pt][interlinespace=15.5pt]
+\definebodyfontenvironment[12pt][interlinespace=16pt]
 \definebodyfontenvironment[13pt][interlinespace=16pt]
 \definesymbol[dotmath][\fontchar{dotmath}] % by name
 
@@ -133,7 +133,7 @@ before={\blank[line]},after={\blank[line]},]
 
 \setupitaliccorrection[text]
 
-\setupalign[hanging,hz,tolerant] % microtypography, allow some stretching
+\setupalign[hanging,hz] % microtypography, allow some stretching
 
 
 %%
