--- a/projects/meganassignments/assignment1.tex
+++ b/projects/meganassignments/assignment1.tex
@@ -4,8 +4,25 @@
 
 \nameanddate{Megan Andrews}{January}{29}{2022}
 
-\chapter[ownnumber=1,title={What is ISHTA Yoga?}]
-
+%\chapter[ownnumber=1,title={What is ISHTA Yoga?}]
+\vskip1.3em
+\startalignment[middle]
+\dontleavehmode
+\raise0.35em\hbox{\rotate[rotation=180]{\scale[xscale=1260]{\symbol[zapfswash]}}}%
+\hskip0.6em%
+Topic 1%
+\hskip0.6em
+\raise0.35em\hbox{\rotate[rotation=180]{\scale[xscale=1260]{\mirror{\symbol[zapfswash]}}}}
+\vskip-\lineheight
+\vskip1ex
+What is {\kerncharacters[0.08]ISHTA} Yoga?
+\vskip0.5ex
+\dontleavehmode
+\scale[xscale=1885]{\mirror{\symbol[zapfswash]}}
+\kern3pt
+\scale[xscale=1885]{\symbol[zapfswash]}
+\stopalignment
+\vskip2.1ex
 \questionnonumber{What does yoga mean to me?} 
 
 From my perspective, yoga is ultimately a form of {\em homecoming}. I interpret homecoming as a return to one’s innermost spiritual nature, while yoga is the vehicle that has the capacity to take me there. 
