--- a/projects/meganassignments/assignments-environment.tex
+++ b/projects/meganassignments/assignments-environment.tex
@@ -11,6 +11,14 @@
 %%
 
 \setupbodyfont[ajenson,12pt]
+\feature[-][onum]
+\feature[+][lnum]
+\feature[-][tnum]
+\feature[+][pnum]
+
+\definefontsynonym[zapfswash][file:ZapfinoExtraLT-Ornaments]
+\definesymbol[zapfswash][{\definedfont[file:ZapfinoExtraLT-Ornaments at 30pt]Æ}]
+
 \definebodyfontenvironment[12pt][interlinespace=16pt]
 \definebodyfontenvironment[13pt][interlinespace=16pt]
 \definesymbol[dotmath][\fontchar{dotmath}] % by name
@@ -29,6 +37,11 @@
 %\definesymbol[mybullet1][\getglyph{kingthings}{\char"004D}]
 \definesymbol[mybullet1][\raise0.2ex\hbox{\definedfont[file:kingthings at 16pt]M}]
 \definesymbol[mybullet2][\raise0.2ex\hbox{{\definedfont[file:kingthings at 15pt]A}}]
+
+\definefontsynonym[adforns][file:adforns]
+%\definesymbol[mybullet1][\raise0.2ex\hbox{\definedfont[file:adforns at 10pt]q}]
+%\definesymbol[mybullet1][\raise0ex\hbox{\definedfont[file:ZapfinoExtraLT-Ornaments at 10pt]Æ}]
+%\definesymbol[mybullet2][\raise0.2ex\hbox{\definedfont[file:adforns at 10pt]c}]
 
 %%
 %% P A P E R   A N D   P A G E   S I Z E
@@ -129,7 +142,7 @@ before={\blank[line]},after={\blank[line]},]
 \setupindenting[yes,medium] % indent paragraphs
 %\setupwhitespace[no] % whitespace between paragraphs
 
-%\setupspacing[packed] % French spacing
+\setupspacing[packed] % French spacing
 
 \setupitaliccorrection[text]
 
@@ -145,7 +158,7 @@ before={\blank[line]},after={\blank[line]},]
   [itemize]
   [
     leftmargin=0em,
-    width=1em,
+    width=1.2em,
     before=,
   ]
 
