--- a/projects/meganassignments/assignment1.tex
+++ b/projects/meganassignments/assignment1.tex
@@ -19,10 +19,11 @@ What is {\kerncharacters[0.08]ISHTA} Yoga?
 \vskip0.5ex
 \dontleavehmode
 \scale[xscale=1885]{\mirror{\symbol[zapfswash]}}
-\kern3pt
+\kern2.5pt
 \scale[xscale=1885]{\symbol[zapfswash]}
 \stopalignment
 \vskip2.1ex
+
 \questionnonumber{What does yoga mean to me?} 
 
 From my perspective, yoga is ultimately a form of {\em homecoming}. I interpret homecoming as a return to one’s innermost spiritual nature, while yoga is the vehicle that has the capacity to take me there. 
@@ -31,7 +32,7 @@ Lower levels of cortisol, increased mobility, strengthened muscles, and improved
 
 From childhood and onward, a person may have accumulated any number of labels, traumas, categorizations, diagnoses, or performance evaluations – either self-imposed or imposed by others. All of these labels can feel like defining characteristics upon which our self-worth relies. To my mind, practicing yoga offers a reprieve from this judgmental narrative. Comments like, “I should have done…” or “I dislike … about myself” are replaced with “I am enough” and “I am worthy.” That is to say, my identity isn’t solely comprised of my perceived achievements or failures, and I am not limited to a single categorical box. Rather, my value is unconditional and part of something much more vast and infinite. So I try to use yoga as an “undressing” of layers that compound a lot of stress, and alternatively, invite in self-acceptance and embrace my innate value as a living being.
 
-I believe yoga offers this to me through the mindful harmonization of breath and posture. The repetition of movement and refocusing of the breath clears away neuroticism and cognitive distortion  with something more primal.  My {\em self}\hairspace\ is no longer entangled with labels, past, trauma, or measurement. The major quality that remains through a good yoga practice is the present – and that is where {\em home} is.
+I believe yoga offers this to me through the mindful harmonization of breath and posture. The repetition of movement and refocusing of the breath clears away neuroticism and cognitive distortion  with something more primal.  My {\em self} is no longer entangled with labels, past, trauma, or measurement. The major quality that remains through a good yoga practice is the present – and that is where {\em home} is.
 
 \stoptext
 
