--- a/projects/meganassignments/assignment3.tex
+++ b/projects/meganassignments/assignment3.tex
@@ -19,49 +19,50 @@ Anatomy I: Basics
 \vskip0.5ex
 \dontleavehmode
 \scale[xscale=1885]{\mirror{\symbol[zapfswash]}}
-\kern3pt
+\kern2.5pt
 \scale[xscale=1885]{\symbol[zapfswash]}
 \stopalignment
 \vskip2.1ex
 
-\question[ownnumber=3.1, title=Briefly describe each of these tissues and its function: Muscle, Ligament, Tendon and Cartilage] 
+\question[ownnumber={3.1}, title={Briefly describe each of these tissues and its function: Muscle, Ligament, Tendon, Cartilage.}] 
 
-{\sc A muscle} is tissue consisting of bundles of parallel fibers wrapped in fascia.
+{\sc Muscle}
+\startnarrower[left]
+\noindent A muscle is tissue consisting of bundles of parallel fibers wrapped in fascia.
 \blank[line]
 
-\start
-\setupalign[nothyphenated]
-\startcolumns[n=2,separator=rule,balance=no]
-\startalignment[middle]
-Properties
-\stopalignment
-\startalignment[right]
-\startitemize[symbol=mybullet1]
-\item Excitable – Reacts to stimuli via innervation
-\item Contractible – May contract upon stimulation in 3 different ways
-    \startitemize[symbol=mybullet2]
-    \item Concentrically – Muscle shortens
-    \item Eccentrically – Muscle lengthens
-    \item Isometrically  – Muscle neither shortens or lengthens during contraction
-    \stopitemize
-\item Extensible - May be stretched
-\item Elastic - Able to recoil
-\stopitemize
-\stopalignment
-\column
-\startalignment[middle]
-Roles
-\stopalignment
-\startitemize[symbol=mybullet1]
-\item Agonist – Prime mover muscle
-\item Synergist – Supporting muscle to help the agonist in movement
-\item Antagonist – Opposes prime mover to slow and monitor movement
-\item Protects joint
-\item Stabilizer – A muscle that pairs with an opposing muscle to keep a bone in place
-\stopitemize
-\stopcolumns
-
-\stop
+%\start
+%\setupalign[nothyphenated]
+%\startcolumns[n=2,separator=rule,balance=no]
+%\startalignment[middle]
+%Properties
+%\stopalignment
+%\startalignment[right]
+%\startitemize[symbol=mybullet1]
+%\item Excitable – Reacts to stimuli via innervation
+%\item Contractible – May contract upon stimulation in 3 different ways
+%    \startitemize[symbol=mybullet2]
+%    \item Concentrically – Muscle shortens
+%    \item Eccentrically – Muscle lengthens
+%    \item Isometrically  – Muscle neither shortens or lengthens during contraction
+%    \stopitemize
+%\item Extensible - May be stretched
+%\item Elastic - Able to recoil
+%\stopitemize
+%\stopalignment
+%\column
+%\startalignment[middle]
+%Roles
+%\stopalignment
+%\startitemize[symbol=mybullet1]
+%\item Agonist – Prime mover muscle
+%\item Synergist – Supporting muscle to help the agonist in movement
+%\item Antagonist – Opposes prime mover to slow and monitor movement
+%\item Protects joint
+%\item Stabilizer – A muscle that pairs with an opposing muscle to keep a bone in place
+%\stopitemize
+%\stopcolumns
+%\stop
 
 \start
 \setupalign[nothyphenated]
@@ -91,24 +92,24 @@ Roles
 \item Protects joint
 \item Stabilizer – A muscle that pairs with an opposing muscle to keep a bone in place
 \stopitemize
-
-
 \stop
+\stopnarrower
 
-
-
-%LIGAMENT: 
-A {\sc ligament} is a dense piece of connective tissue that connects one bone to another bone.
+\noindent{\sc Ligament}
+\startnarrower[left]
+\noindent A ligament is a dense piece of connective tissue that connects one bone to another bone.
 Protects joints
 Avascular - no blood supply
 Barely elastic → difficult to heal
-
-%TENDON: 
-A {\sc tendon} is a tough, fibrous continuation of muscle fascia that attaches muscle to bone.
+\stopnarrower
+\blank[line]
+\noindent{\sc Tendon}
+\startnarrower[left]
+\noindent A tendon is a tough, fibrous continuation of muscle fascia that attaches muscle to bone.
 Stabilizes joint
 Transmits and supports muscle force
 Woven into the periosteum/outer shell of the bone
-
+\stopnarrower
 
 CARTILAGE: Cartilage is supplementary tissue to muscle providing strength, rigidity, and a little elasticity.
 
@@ -123,12 +124,12 @@ Avascular - no blood supply
 
 
 
-\question{The elbow is a hinge joint and the hip is a ball-and-socket joint.
-What are the movements of a hinge joint? Name the plane.}
+\question[ownnumber={3.2},title={The elbow is a hinge joint and the hip is a ball-and-socket joint.
+What are the movements of a hinge joint? Name the plane.}]
 
 The movements of a hinge joint are flexion and extension, and the plane is the Sagittal Plane.
 
-\question{What are the movements of a ball-and-socket joint? In how many planes does a ball-and-socket joint move and what are the actions in each of the planes?}
+\question[ownnumber={3.3},title={What are the movements of a ball-and-socket joint? In how many planes does a ball-and-socket joint move and what are the actions in each of the planes?}]
 
 The movements of a ball-and-socket joint and their corresponding planes are:
 1. Rotation (internal and external) in the Transverse Plane
@@ -136,7 +137,7 @@ The movements of a ball-and-socket joint and their corresponding planes are:
 3. Adduction & Abduction in Coronal Plane
 * Circumduction involves all movements and planes in combination
 
-\question{What is the job of an agonist? What is the job of a synergist?}
+\question[ownnumber={3.4},title={What is the job of an agonist? What is the job of a synergist?}]
 
 An agonist is the prime mover muscle that does the bulk of the work in a movement. The synergist is a supporting muscle that assists the agonist in doing the movement or compensates if the agonist is injured/dysfunctional.
 
