--- a/projects/meganassignments/assignment3.tex
+++ b/projects/meganassignments/assignment3.tex
@@ -29,7 +29,6 @@ Anatomy I: Basics
 {\sc Muscle}
 \startnarrower[left]
 \noindent A muscle is tissue consisting of bundles of parallel fibers wrapped in fascia.
-\blank[line]
 
 %\start
 %\setupalign[nothyphenated]
@@ -64,65 +63,79 @@ Anatomy I: Basics
 %\stopcolumns
 %\stop
 
-\start
-\setupalign[nothyphenated]
-
+\blank[halfline]
 \noindent Properties:
-
 \startalignment[right]
 \startitemize[symbol=mybullet1]
 \item Excitable – Reacts to stimuli via innervation
 \item Contractible – May contract upon stimulation in 3 different ways
     \startitemize[symbol=mybullet2]
-    \item Concentrically – Muscle shortens
-    \item Eccentrically – Muscle lengthens
-    \item Isometrically  – Muscle neither shortens or lengthens during contraction
+    \item Concentrically - Muscle shortens
+    \item Eccentrically - Muscle lengthens
+    \item Isometrically  - Muscle neither shortens or lengthens during contraction
     \stopitemize
 \item Extensible - May be stretched
 \item Elastic - Able to recoil
 \stopitemize
 \stopalignment
 
+\blank[halfline]
 \noindent Roles:
-
 \startitemize[symbol=mybullet1]
-\item Agonist – Prime mover muscle
-\item Synergist – Supporting muscle to help the agonist in movement
-\item Antagonist – Opposes prime mover to slow and monitor movement
+\item Agonist - Prime mover muscle
+\item Synergist - Supporting muscle to help the agonist in movement
+\item Antagonist - Opposes prime mover to slow and monitor movement
 \item Protects joint
-\item Stabilizer – A muscle that pairs with an opposing muscle to keep a bone in place
+\item Stabilizer - A muscle that pairs with an opposing muscle to keep a bone in place
 \stopitemize
-\stop
 \stopnarrower
+\blank[halfline]
 
 \noindent{\sc Ligament}
 \startnarrower[left]
 \noindent A ligament is a dense piece of connective tissue that connects one bone to another bone.
-Protects joints
-Avascular - no blood supply
-Barely elastic → difficult to heal
+\blank[halfline]
+\startitemize[mybullet1]
+\item Protects joints
+\item Avascular - no blood supply
+\item Barely elastic \symbol[zapfarrow]\ difficult to heal
+\stopitemize
 \stopnarrower
-\blank[line]
+\blank[halfline]
+\page[yes]
+
 \noindent{\sc Tendon}
 \startnarrower[left]
 \noindent A tendon is a tough, fibrous continuation of muscle fascia that attaches muscle to bone.
-Stabilizes joint
-Transmits and supports muscle force
-Woven into the periosteum/outer shell of the bone
+\blank[halfline]
+\startitemize[mybullet1]
+\item Stabilizes joint
+\item Transmits and supports muscle force
+\item Woven into the periosteum/outer shell of the bone
+\stopitemize
 \stopnarrower
+\blank[halfline]
 
-CARTILAGE: Cartilage is supplementary tissue to muscle providing strength, rigidity, and a little elasticity.
-
-Fibrocartilage
-Hyaline Cartilage
-Cushioning, pillowy 
-Shock-absorbing
-Avascular - no blood supply
-Smooth, glassy
-Reinforcing coat where bones rub against one another
-Avascular - no blood supply
-
-
+\noindent{\sc Cartilage}
+\startnarrower[left]
+\noindent Cartilage is supplementary tissue to muscle providing strength, rigidity, and a little elasticity.
+\blank[halfline]
+\startitemize[mybullet1]
+\item Fibrocartilage
+    \startitemize[symbol=mybullet2]
+    \item Cushioning, pillowy 
+    \item Shock-absorbing
+    \item Avascular - no blood supply
+    \stopitemize
+\item Hyaline Cartilage
+    \startitemize[symbol=mybullet2]
+    \item Smooth, glassy
+    \item Reinforcing coat where bones rub against one another
+    \item Avascular - no blood supply
+    \stopitemize
+\stopitemize
+\stopnarrower
+\vskip0.5\lineheight
 
 \question[ownnumber={3.2},title={The elbow is a hinge joint and the hip is a ball-and-socket joint.
 What are the movements of a hinge joint? Name the plane.}]
@@ -132,10 +145,14 @@ The movements of a hinge joint are flexion and extension, and the plane is the S
 \question[ownnumber={3.3},title={What are the movements of a ball-and-socket joint? In how many planes does a ball-and-socket joint move and what are the actions in each of the planes?}]
 
 The movements of a ball-and-socket joint and their corresponding planes are:
-1. Rotation (internal and external) in the Transverse Plane
-2. Flexion & Extension in the Sagittal Plane
-3. Adduction & Abduction in Coronal Plane
-* Circumduction involves all movements and planes in combination
+\startitemize[n]
+\item Rotation (internal and external) in the Transverse Plane
+\item Flexion & Extension in the Sagittal Plane
+\item Adduction & Abduction in Coronal Plane
+\stopitemize
+\startitemize[symbol=bulletstar]
+\item Circumduction involves all movements and planes in combination, except rotation in the Transverse plane
+\stopitemize
 
 \question[ownnumber={3.4},title={What is the job of an agonist? What is the job of a synergist?}]
 
