--- a/projects/meganassignments/assignment4.tex
+++ b/projects/meganassignments/assignment4.tex
@@ -1,5 +1,7 @@
 \environment assignments-environment
 
+\setuplanguage[en][lefthyphenmin=3,righthyphenmin=3]
+
 \starttext
 
 \nameanddate{Megan Andrews}{January}{29}{2022}
