--- a/projects/meganassignments/assignments-environment.tex
+++ b/projects/meganassignments/assignments-environment.tex
@@ -30,6 +30,14 @@
 \definesymbol[mybullet1][\raise0.2ex\hbox{\definedfont[file:kingthings at 16pt]M}]
 \definesymbol[mybullet2][\raise0.2ex\hbox{{\definedfont[file:kingthings at 15pt]A}}]
 
+%%
+%% C O L O R S
+%%
+
+\definecolor[inhale][x=C80E0E]
+\definecolor[exhale][x=2A4AA7]
+
+
 
 %%
 %% P A P E R   A N D   P A G E   S I Z E
