--- a/projects/peterassignments/assignment1.tex
+++ b/projects/peterassignments/assignment1.tex
@@ -2,27 +2,27 @@
 
 \starttext
 
-\nameanddate{Megan Andrews}{February}{5}{2022}
+\nameanddate{Megan Andrews}{January}{29}{2022}
 
 %\chapter[ownnumber=1,title={What is ISHTA Yoga?}]
 \vskip1.3em
 \startalignment[middle]
 \dontleavehmode
-\raise0.35em\hbox{\rotate[rotation=180]{\scale[xscale=1260]{\symbol[zapfswash]}}}%
+\raise0.4em\hbox{\rotate[rotation=180]{\scale[xscale=1260]{\symbol[zapfswash]}}}%
 \hskip0.6em%
-Topic 1%
+{\tfa Topic 1}%
 \hskip0.6em
-\raise0.35em\hbox{\rotate[rotation=180]{\scale[xscale=1260]{\mirror{\symbol[zapfswash]}}}}
+\raise0.4em\hbox{\rotate[rotation=180]{\scale[xscale=1260]{\mirror{\symbol[zapfswash]}}}}
 \vskip-\lineheight
-\vskip1ex
-What is {\kerncharacters[0.08]ISHTA} Yoga?
+\vskip1.1ex
+{\tfa What is {\kerncharacters[0.08]ISHTA} Yoga?}
 \vskip0.5ex
 \dontleavehmode
-\scale[xscale=1885]{\mirror{\symbol[zapfswash]}}
+\scale[xscale=1977]{\mirror{\symbol[zapfswash]}}
 \kern2.5pt
-\scale[xscale=1885]{\symbol[zapfswash]}
+\scale[xscale=1977]{\symbol[zapfswash]}
 \stopalignment
-\vskip2.1ex
+\vskip2ex
 
 \questionnonumber{What does yoga mean to me?} 
 
