--- a/projects/peterassignments/assignment3.tex
+++ b/projects/peterassignments/assignment3.tex
@@ -2,29 +2,29 @@
 
 \starttext
 
-\nameanddate{Megan Andrews}{February}{5}{2022}
+\nameanddate{Megan Andrews}{January}{29}{2022}
 
 %\chapter[ownnumber=3,title={Anatomy I: Basics}]
 \vskip1.3em
 \startalignment[middle]
 \dontleavehmode
-\raise0.35em\hbox{\rotate[rotation=180]{\scale[xscale=1260]{\symbol[zapfswash]}}}%
+\raise0.4em\hbox{\rotate[rotation=180]{\scale[xscale=1260]{\symbol[zapfswash]}}}%
 \hskip0.6em%
-Topic 3%
+{\tfa Topic 3}%
 \hskip0.6em
-\raise0.35em\hbox{\rotate[rotation=180]{\scale[xscale=1260]{\mirror{\symbol[zapfswash]}}}}
+\raise0.4em\hbox{\rotate[rotation=180]{\scale[xscale=1260]{\mirror{\symbol[zapfswash]}}}}
 \vskip-\lineheight
-\vskip1ex
-Anatomy I: Basics
+\vskip1.1ex
+{\tfa Anatomy I: Basics}
 \vskip0.5ex
 \dontleavehmode
-\scale[xscale=1885]{\mirror{\symbol[zapfswash]}}
+\scale[xscale=1977]{\mirror{\symbol[zapfswash]}}
 \kern2.5pt
-\scale[xscale=1885]{\symbol[zapfswash]}
+\scale[xscale=1977]{\symbol[zapfswash]}
 \stopalignment
-\vskip2.1ex
+\vskip2ex
 
-\question[ownnumber={3.1}, title={Briefly describe each of these tissues and its function: Muscle, Ligament, Tendon, Cartilage.}] 
+\question[ownnumber={3.1}, title={Briefly describe each of these tissues and its function: Muscle, Ligament, Tendon, and Cartilage.}] 
 
 {\sc Muscle}
 \startnarrower[left]
@@ -135,7 +135,7 @@ Anatomy I: Basics
     \stopitemize
 \stopitemize
 \stopnarrower
-\vskip0.5\lineheight
+%\vskip0.5\lineheight
 
 \question[ownnumber={3.2},title={The elbow is a hinge joint and the hip is a ball-and-socket joint.
 What are the movements of a hinge joint? Name the plane.}]
