--- a/projects/peterassignments/assignment4.tex
+++ b/projects/peterassignments/assignment4.tex
@@ -4,27 +4,27 @@
 
 \starttext
 
-\nameanddate{Megan Andrews}{February}{5}{2022}
+\nameanddate{Megan Andrews}{January}{29}{2022}
 
 %\chapter[ownnumber=3,title={Anatomy I: Basics}]
 \vskip1.3em
 \startalignment[middle]
 \dontleavehmode
-\raise0.35em\hbox{\rotate[rotation=180]{\scale[xscale=1260]{\symbol[zapfswash]}}}%
+\raise0.4em\hbox{\rotate[rotation=180]{\scale[xscale=1260]{\symbol[zapfswash]}}}%
 \hskip0.6em%
-Topic 4%
+{\tfa Topic 4}%
 \hskip0.6em
-\raise0.35em\hbox{\rotate[rotation=180]{\scale[xscale=1260]{\mirror{\symbol[zapfswash]}}}}
+\raise0.4em\hbox{\rotate[rotation=180]{\scale[xscale=1260]{\mirror{\symbol[zapfswash]}}}}
 \vskip-\lineheight
 \vskip1ex
-Anatomy II: Spine
+{\tfa Anatomy II: Spine}
 \vskip0.5ex
 \dontleavehmode
-\scale[xscale=1885]{\mirror{\symbol[zapfswash]}}
+\scale[xscale=1977]{\mirror{\symbol[zapfswash]}}
 \kern2.5pt
-\scale[xscale=1885]{\symbol[zapfswash]}
+\scale[xscale=1997]{\symbol[zapfswash]}
 \stopalignment
-\vskip2.1ex
+\vskip2ex
 
 \question[ownnumber={4.1}, title={How many individual vertebrae are in the spinal column? How many vertebrae are in  each curve?}] 
 
@@ -50,7 +50,7 @@ After birth, a baby takes the shape of a comma, so there is a kyphodic curve/con
     \item Lateral flexion may be limited by tension in the trapezius muscles and/or ligaments in the spine
     \stopitemize
 \stopitemize
-
+\page[yes]
 \startitemize[symbol=mybullet1]
 \item Thoracic Spine
     \startitemize[symbol=mybullet2]    
