--- a/projects/peterassignments/assignments-environment.tex
+++ b/projects/peterassignments/assignments-environment.tex
@@ -2,13 +2,34 @@
 
 \mainlanguage[en]
 
+%\lesshyphens
+\setuplanguage[en][lefthyphenmin=5,righthyphenmin=5]
+%\setupalign[nothyphenated]
+
 %%
 %% F O N T S
 %%
 
-\setupbodyfont[sabonnext,11pt]
-\definebodyfontenvironment[11pt][interlinespace=14.5pt]
-\definesymbol[leaf][\fontchar{leaf}] % by name
+\setupbodyfont[ajenson,12pt]
+\feature[-][onum]
+\feature[+][lnum]
+\feature[-][tnum]
+\feature[+][pnum]
+
+\definebodyfontenvironment[12pt][interlinespace=16pt]
+
+\definefontsynonym[zapfswash][file:ZapfinoExtraLT-Ornaments]
+\definesymbol[zapfswash][{\definedfont[file:ZapfinoExtraLT-Ornaments at 30pt]Æ}]
+
+\definesymbol[bulletstar][*]
+
+\definefontsynonym[zapfornitc][file:ZapfDingbatsITCbyBT-Regular]
+\definesymbol[zapfarrow][\getglyph{zapfornitc}{\char"00D5}]
+
+\definefontsynonym[kingthings][file:kingthings.ttf]
+\definesymbol[mybullet1][\raise0.2ex\hbox{\definedfont[file:kingthings at 16pt]M}]
+\definesymbol[mybullet2][\raise0.2ex\hbox{{\definedfont[file:kingthings at 15pt]A}}]
+
 
 %%
 %% P A P E R   A N D   P A G E   S I Z E
@@ -26,15 +47,15 @@
     topspace=30mm,
     header=0\baselineskip,
     headerdistance=0\baselineskip,
-    height=240mm,
+    height=\dimexpr(227mm+3\baselineskip)\relax,
     footerdistance=2\baselineskip,
     footer=1\lineheight,
    % INNER TO OUTER
 %    backspace=\dimexpr(\paperwidth/8)\relax,% twosided
-    backspace=45mm,% onesided
+    backspace=35mm,% onesided
     leftmargin=64pt,
     leftmargindistance=9pt,
-    width=120mm,
+    width=140mm,
     rightmargin=64pt,
     rightmargindistance=16pt,
 ]
@@ -78,13 +99,13 @@
 \setuphead[chapter]
     [page=no,
     header=empty,
-    style=\tf,
-%    alternative=middle,
+    style=\bf,
+    alternative=middle,
     numberstyle={\feature[+][lnum]},
 %    numbercommand=\Dot,
 %    textcommand={\kerncharacters[0.16]\spaceskip0.35em},
 %    deeptextcommand=\WORD,
-    after={\blank[line]},
+    after={\blank[2*line]},
     before=,
 ]
 
@@ -95,9 +116,9 @@
 
 
 \definehead[question][section]
-\setuphead[question][%alternative=inmargin,
-style=\sl,interlinespace=14pt,
-before={\blank[line]},after={\blank[line]},]
+\setuphead[question][alternative=inmargin,
+style=\it,interlinespace=16pt,
+before={\vskip1.5\baselineskip},after={\blank[halfline]},]
 
 \definehead[questionnonumber][question]
 \setuphead[questionnonumber][number=no]
@@ -113,7 +134,22 @@ before={\blank[line]},after={\blank[line]},]
 
 \setupitaliccorrection[text]
 
-\setupalign[hanging,hz,tolerant] % microtypography, allow some stretching
+\setupalign[hanging,hz] % microtypography, allow some stretching
+
+
+%%
+%% I T E M I Z E
+%%
+
+\setupitemize[packed]
+\setupitemgroup
+  [itemize]
+  [
+    leftmargin=0em,
+    width=1.2em,
+    before=,
+    after=,
+  ]
 
 %%
 %% H E A D E R S   &   F O O T E R S
@@ -125,13 +161,14 @@ before={\blank[line]},after={\blank[line]},]
                  [] % verso inner
                  [\hfill{\kerncharacters[0.17]\sc \getmarking[chapter]}\hfill] % verso outer
 
-%\setupfootertexts[\hfill\lower0.7em \hbox{\definedfont[file:FeFlow2 at 14pt]t} \pagenumber\ \lower0.7em 
-%\hbox{\definedfont[file:FeFlow2 at 14pt]s}\hfill] % recto outer
-%                 [] % recto inner
-%                 [] % verso inner
-%                 [\hfill{\definedfont[file:FeFlow2]t} \pagenumber\ {\definedfont[file:FeFlow2]s}\hfill] % verso outer
+\setupfootertexts[\hfill\lower0.5em \hbox{\definedfont[file:Nymphette.ttf at 24pt]1} \hskip0.2em\pagenumber\hskip0.2em\ \lower0.5em 
+\hbox{\definedfont[file:Nymphette.ttf at 24pt]2}\hfill] % recto outer
+                 [] % recto inner
+                 [] % verso inner
+                 [\hfill\lower0.5em \hbox{\definedfont[file:Nymphette.ttf at 24pt]1} \hskip0.2em\pagenumber\hskip0.2em\ \lower0.5em 
+\hbox{\definedfont[file:Nymphette.ttf at 24pt]2}\hfill] % verso outer
 
-\setupfootertexts[\hfill\pagenumber\hfill][][][\hfill\pagenumber\hfill]
+%\setupfootertexts[\hfill\pagenumber\hfill][][][\hfill\pagenumber\hfill]
 
 %%
 %% M I S C
@@ -144,14 +181,13 @@ before={\blank[line]},after={\blank[line]},]
 %
 
 \define[4]\nameanddate{%
-\startalignment[left]
+\startalignment[right]
 \noindent #1\par
-{\kerncharacters[0.1]ISHTA YTT} Homework\par
-%\blank[halfline]
-%\blank[halfline] 
+\noindent{\spaceskip0.3em\kerncharacters[0.08]\feature[-][onum]\feature[+][lnum]ISHTA 200H TT} Assignment\par
+\noindent Mentor: Peter Farko\par
 \noindent #2 {\sc #3, #4}\par
 \stopalignment
-\blank[3*line]}
+\blank[1*line]}
 
 %%
 %% D R O P   C A P S
@@ -204,10 +240,6 @@ before={\blank[line]},after={\blank[line]},]
 %\showgrid
 
 %\enabletrackers[visualizers.justification]
-
-%\adaptlayout[7][lines=+1]
-%\adaptlayout[11][lines=+1]
-%\adaptlayout[14][lines=+1]
 
 
 \stopenvironment
