--- a/projects/peterassignments/assignments.tex
+++ b/projects/peterassignments/assignments.tex
@@ -8,13 +8,13 @@
 
 \questionnonumber{What does yoga mean to me?} 
 
-From my perspective, yoga is ultimately a form of {\em homecoming}. I interpret homecoming as a return to one’s innermost spiritual nature, while yoga is the vehicle that has the capacity to take me there. 
+From my perspective, yoga is ultimately a form of \hairspace{\em homecoming}. I interpret homecoming as a return to one’s innermost spiritual nature, while yoga is the vehicle that has the capacity to take me there. 
 
 Lower levels of cortisol, increased mobility, strengthened muscles, and improved quality of sleep are all measurable and tangible benefits of yoga that I have personally experienced and enjoyed. And while these physical benefits are signficant, as I’ve furthered my journey in yoga, I have found that there is the less tangible benefit of spiritual connection that has proven even more valuable. Part of this spiritual connection is the realization that we are intrinsically worthy and equal, as well as parts of a greater whole and interconnectedness. This has been profoundly comforting to me.
 
 From childhood and onward, a person may have accumulated any number of labels, traumas, categorizations, diagnoses, or performance evaluations – either self-imposed or imposed by others. All of these labels can feel like defining characteristics upon which our self-worth relies. To my mind, practicing yoga offers a reprieve from this judgmental narrative. Comments like, “I should have done…” or “I dislike … about myself” are replaced with “I am enough” and “I am worthy.” That is to say, my identity isn’t solely comprised of my perceived achievements or failures, and I am not limited to a single categorical box. Rather, my value is unconditional and part of something much more vast and infinite. So I try to use yoga as an “undressing” of layers that compound a lot of stress, and alternatively, invite in self-acceptance and embrace my innate value as a living being.
 
-I believe yoga offers this to me through the mindful harmonization of breath and posture. The repetition of movement and refocusing of the breath clears away neuroticism and cognitive distortion  with something more primal.  My {\em self} is no longer entangled with labels, past, trauma, or measurement. The major quality that remains through a good yoga practice is the present – and that is where {\em home} is.
+I believe yoga offers this to me through the mindful harmonization of breath and posture. The repetition of movement and refocusing of the breath clears away neuroticism and cognitive distortion  with something more primal.  My {\em self}\hairspace\ is no longer entangled with labels, past, trauma, or measurement. The major quality that remains through a good yoga practice is the present – and that is where {\em home} is.
 
 \stoptext
 
