--- a/projects/meganassignments/assignment4.tex
+++ b/projects/meganassignments/assignment4.tex
@@ -50,7 +50,7 @@ After birth, a baby takes the shape of a comma, so there is a kyphodic curve/con
     \item Lateral flexion may be limited by tension in the trapezius muscles and/or ligaments in the spine
     \stopitemize
 \stopitemize
-
+\page[yes]
 \startitemize[symbol=mybullet1]
 \item Thoracic Spine
     \startitemize[symbol=mybullet2]    
