--- a/projects/meganassignments/assignments-environment.tex
+++ b/projects/meganassignments/assignments-environment.tex
@@ -192,7 +192,7 @@ before={\blank[line]},after={\blank[line]},]
 \startalignment[right]
 \noindent #1\par
 \noindent{\spaceskip0.3em\kerncharacters[0.08]\feature[-][onum]\feature[+][lnum]ISHTA 200H TT} Assignment\par
-\noindent Mentor: Peter Farko\par
+\noindent Mentor: Peter Ferko\par
 \noindent #2 {\sc #3, #4}\par
 \stopalignment
 \blank[1*line]}
